// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders comment stream 1`] = `
<div
  className="Center-root"
>
  <div>
    <h1
      className="Typography-root Typography-heading1 Typography-gutterBottom"
    >
      Talk NEO
    </h1>
    <form
      autoComplete="off"
      onSubmit={[Function]}
    >
      <div>
        <textarea
          className="PostCommentForm-textarea"
          name="body"
          onChange={[Function]}
          value=""
        />
      </div>
      <div
        className="PostCommentForm-postButtonContainer"
      >
        <button
          className="BaseButton-root Button-root Button-primary"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          Post
        </button>
      </div>
    </form>
    <div
      aria-live="polite"
      id="talk-comments-stream-log"
      role="log"
    >
      <div>
        <div
          className="Comment-root Comment-gutterBottom"
          role="article"
        >
          <div
            className="Comment-topBar"
          >
            <span
              className="Username-root"
            >
              Markus
            </span>
          </div>
          <p
            className="Typography-root Typography-body1"
          >
            Joining Too
          </p>
        </div>
        <div
          className="Indent-root Indent-level0"
        >
          <div
            id="talk-comments-replyList-log--comment-0"
            role="log"
          >
            <div
              className="Comment-root Comment-gutterBottom"
              role="article"
            >
              <div
                className="Comment-topBar"
              >
                <span
                  className="Username-root"
                >
                  Lukas
                </span>
              </div>
              <p
                className="Typography-root Typography-body1"
              >
                What's up?
              </p>
            </div>
            <button
              aria-controls="talk-comments-replyList-log--comment-0"
              className="BaseButton-root Button-root Button-invert Button-fullWidth Button-secondary"
              disabled={false}
              id="talk-comments-replyList-showAll--comment-0"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
            >
              Show All Replies
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`show all replies 1`] = `
<div
  className="Center-root"
>
  <div>
    <h1
      className="Typography-root Typography-heading1 Typography-gutterBottom"
    >
      Talk NEO
    </h1>
    <form
      autoComplete="off"
      onSubmit={[Function]}
    >
      <div>
        <textarea
          className="PostCommentForm-textarea"
          name="body"
          onChange={[Function]}
          value=""
        />
      </div>
      <div
        className="PostCommentForm-postButtonContainer"
      >
        <button
          className="BaseButton-root Button-root Button-primary"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          Post
        </button>
      </div>
    </form>
    <div
      aria-live="polite"
      id="talk-comments-stream-log"
      role="log"
    >
      <div>
        <div
          className="Comment-root Comment-gutterBottom"
          role="article"
        >
          <div
            className="Comment-topBar"
          >
            <span
              className="Username-root"
            >
              Markus
            </span>
          </div>
          <p
            className="Typography-root Typography-body1"
          >
            Joining Too
          </p>
        </div>
        <div
          className="Indent-root Indent-level0"
        >
          <div
            id="talk-comments-replyList-log--comment-0"
            role="log"
          >
            <div
              className="Comment-root Comment-gutterBottom"
              role="article"
            >
              <div
                className="Comment-topBar"
              >
                <span
                  className="Username-root"
                >
                  Lukas
                </span>
              </div>
              <p
                className="Typography-root Typography-body1"
              >
                What's up?
              </p>
            </div>
            <div
              className="Comment-root Comment-gutterBottom"
              role="article"
            >
              <div
                className="Comment-topBar"
              >
                <span
                  className="Username-root"
                >
                  Isabelle
                </span>
              </div>
              <p
                className="Typography-root Typography-body1"
              >
                Hey!
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
